[tool.poetry]
name = "bobsled"
version = "3.1.2"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3"
pytest = "^5.2"
pyyaml = "^5.1"
docker = "^4.1"
starlette = ">=0.13,<0.26"
uvicorn = "^0.15.0"
aiofiles = "^0.4.0"
jinja2 = "^2.10"
databases = "^0.5.0"
aiosqlite = "^0.10.0"
pytest-asyncio = "^0.10.0"
pyjwt = "^1.7"
passlib = "^1.7"
argon2_cffi = "^19.1"
python-multipart = "^0.0.5"
flake8 = "^3.7"
boto3 = "^1.9"
moto = "^1.3"
"github3.py" = "^1.3"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.8"
pyzmq = "^18.1"

[tool.poetry.dev-dependencies]
pytest-mock = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
